--- a/app_server/views/signIn.pug
+++ b/app_server/views/signIn.pug
@@ -14,7 +14,10 @@ block content
           .form-group  
             label Password:
             input(type='text' name='password')
-        button.btn.btn-primary(type='submit') Submit  
+        button.btn.btn-primary(type='submit') Submit
+        br
+        br
+        a(href='/register') Register  
         
  
   
