--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,20 +1,23 @@
 @import url("//fonts.googleapis.com/css?family=Lobster|Cabin:400,700");
 
 .banner{
-  background-image: url("banner1.jpg");
+  background-image: url("../images/banner1.jpg");
   background-size: 100%;
   background-repeat: no-repeat;
   height:400px;
  
 }
-.nav{
-  background-color: #089e08;
- 
-}
-.nav a{
+
+a{
   color:#000;
-  font-size: 25px;
-  margin-left:50px;
+  text-decoration: none;
+  background-color: #ccc;
+  padding:5px;
+  
+}
+a:hover{
+  color: #000;
+  text-decoration: none;
 }
 
 
@@ -47,3 +50,34 @@ body {
 .form-group input{
   margin-left: 10px;
 }
+.search-container{
+  float:right;
+  padding-bottom:20px;
+}
+.search-container button {
+  float: right;
+  padding: 2px;
+  margin: 8px,16px,15px,15px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.search-container button:hover {
+  background: #ccc;
+}
+
+@media screen and (max-width: 600px) {
+  .search-container {
+    float: none;
+  }
+
+  .search-container button {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
