--- a/app_server/views/register.pug
+++ b/app_server/views/register.pug
@@ -2,19 +2,21 @@ extends layout
 
 block content
   .container
-    h2 Register
-    form(action='')
-      .form-group
-        label First Name: 
-        input(type='text' name='firstName')
-      .form-group
-        label Last Name: 
-        input(type='text' name='lastName')
-      .form-group
-        label E-Mail: 
-        input(type='text' name='eMail')
-      .form-group
-        label Password: 
-        input(type='text' name='password') 
+    .row
+      .col-12
+        h1 Register
+    .row
+      .col-12.col-md-8
+        h2 Register
+        form(action='')
+          .form-group
+            label Username: 
+            input(type='text' name='username')
+          .form-group
+            label E-Mail: 
+            input(type='text' name='eMail')
+          .form-group
+            label Password: 
+            input(type='text' name='password') 
 
       button.btn.btn-primary(type='submit') Submit  
