--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -12,6 +12,7 @@ html
    
     
     block content
+    block scripts
     footer
       .row
         .col-12
@@ -19,3 +20,4 @@ html
     script(src='https://code.jquery.com/jquery-3.1.1.slim.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js')
     script(src='/javascripts/bootstrap.min.js')
+    
