--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -9,10 +9,9 @@ html
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js')
   body
     .banner.div
-   
     
     block content
-    
+    app-home-list 
     block scripts
 
 
