--- a/app_server/views/reviews.pug
+++ b/app_server/views/reviews.pug
@@ -7,7 +7,7 @@ block content
         h1 Review Movie
     .row
       .col-12.col-md-8
-        form(action="/location", method="get", role="form") 
+        form(action="/movie/:movieid/review/new", method="post", role="form") 
           .form-group.row
             label.col-10.col-sm-2.col-form-label(for="name") Name
             .col-12.col-sm-10
